History, code optimizations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,10 +29,10 @@
 
     <string name="menu_people">People</string>
     <string name="add_ok">OK</string>
-    <string name="current_total">Total:</string>
-    <string name="current_current">Current balance:</string>
-    <string name="current_price">Price:</string>
-    <string name="current_left">Money left:</string>
+    <string name="current_total">Total:%1$d</string>
+    <string name="current_current">Current balance:%1$d</string>
+    <string name="current_price">Price:%1$d</string>
+    <string name="current_left">Money left:%1$d</string>
     <string name="no_collections">No collections yet</string>
     <string name="groups_empty_message">No groups yet, click + to create one</string>
     <string name="submit">Submit</string>
